# WHHAudio

./: README.md
all_projects/: CMakeLists.txt
all_projects/libWHHaudio/: CMakeLists.txt
all_projects/libWHHaudio/src/: libWHHaudio.cpp  whh_audio_common_private.cpp  whh_audio_common_private.h
all_projects/libWHHaudio/src/src_audio_render/: whh_dev_manager.cpp  whh_dev_manager.h
all_projects/libWHHaudio/src/src_dev_manager/: whh_core_audio_manager.cpp  whh_core_audio_manager.h
examples/all_examples/: CMakeLists.txt
include/: libWHHaudio.h  whh_audio_common.h
